tests/baselines/reference/objectSpreadGeneric.errors.txt
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(4,11): error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...V; ...U; ...T }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(5,11): error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...U; ...T; ...V }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(6,11): error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...U; ...V }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(7,11): error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...T; ...V }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(8,11): error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...T; ...U }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(13,11): error TS2322: Type '{}' is not assignable to type '{ ...T; ...U }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(26,11): error TS2322: Type '{ first: string; ...T; second: string; ...U; third: string; }' is not assignable to type '{ first: string; second: string; ...T; third: string; }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(34,11): error TS2322: Type '{ firrrrrrst: string; ...T; second: string; ...U; third: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
  Property 'first' is missing in type '{ firrrrrrst: string; ...T; second: string; ...U; third: string; }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(36,11): error TS2322: Type '{ first: string; ...T; ssssssssecond: string; ...U; third: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
  Property 'second' is missing in type '{ first: string; ...T; ssssssssecond: string; ...U; third: string; }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(38,11): error TS2322: Type '{ first: string; ...T; second: string; ...U; thirrrrrrrd: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
  Property 'third' is missing in type '{ first: string; ...T; second: string; ...U; thirrrrrrrd: string; }'.


==== tests/cases/conformance/types/spread/objectSpreadGeneric.ts (10 errors) ====
    function f<T, U, V>(t: T, u: U, v: V): void {
        let o: { ...T, ...U, ...V };
        const same: { ...T, ...U, ...V } = o; // ok
        const reversed: { ...V, ...U, ...T } = o; // error, reversed
              ~~~~~~~~
!!! error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...V; ...U; ...T }'.
        const reversed2: { ...U, ...T, ...V } = o; // error, U and T are still reversed
              ~~~~~~~~~
!!! error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...U; ...T; ...V }'.
        const missingT: { ...U, ...V } = o; // error, missing T
              ~~~~~~~~
!!! error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...U; ...V }'.
        const missingU: { ...T, ...V } = o; // error, missing U
              ~~~~~~~~
!!! error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...T; ...V }'.
        const missingV: { ...T, ...U } = o; // error, missing V
              ~~~~~~~~
!!! error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...T; ...U }'.
        const atEnd: { ...T, ...U, second: string } = { ...t, ...u, second: 'foo' }; // ok
        const atBeginning: { first: string, ...T, ...U, } = { first: 'foo', ...t, ...u }; // ok
    
        const emptyTarget: { } = { ...t, ...u } // ok
        const emptySource: { ...T, ...U } = { }; // error, {} is not assignable to U (or T)
              ~~~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type '{ ...T; ...U }'.
    
        let optionalNumber: { sn?: number };
        let optionalString: { sn?: string };
        let optionalBoolean: { sn?: boolean };
        const unionCutoff: { ...T, sn?: number | string | boolean } =
            { ...optionalBoolean, ...t, ...optionalString, ...optionalNumber } // ok
        unionCutoff.sn; // ok
        const optionalCutoff = { ...t, ...optionalNumber }; // ok
        optionalCutoff.sn; // ok
    
        const interspersed: { first: string, ...T, second: string, ...U, third: string } =
            { first: '1', ...t, second: '2', ...u, third: '3' }; // ok
        const interspersedMissingU: { first: string, second: string, ...T, third: string } =
              ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ first: string; ...T; second: string; ...U; third: string; }' is not assignable to type '{ first: string; second: string; ...T; third: string; }'.
            { first: '1', ...t, second: '2', ...u, third: '3' }; // error, 'U' is missing
        const interspersedOrder1: { first: string, ...T, second: string, ...U, third: string, secondsecond: string } =
            { first: '1', ...t, second: '2', ...u, third: '3', secondsecond: 'false' }; // ok
        const interspersedOrder2: { first: string, second: string, secondsecond: string, third: string, ...T, ...U } =
            { first: '1', ...t, second: '2', ...u, third: '3', secondsecond: 'false' }; // ok
    
    
        const mismatchFirst: { first: string, ...T, second: string, ...U, third: string } =
              ~~~~~~~~~~~~~
!!! error TS2322: Type '{ firrrrrrst: string; ...T; second: string; ...U; third: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
!!! error TS2322:   Property 'first' is missing in type '{ firrrrrrst: string; ...T; second: string; ...U; third: string; }'.
            { firrrrrrst: '1', ...t, second: '2', ...u, third: '3' }; // error, 'first' not found
        const mismatchSecond: { first: string, ...T, second: string, ...U, third: string } =
              ~~~~~~~~~~~~~~
!!! error TS2322: Type '{ first: string; ...T; ssssssssecond: string; ...U; third: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
!!! error TS2322:   Property 'second' is missing in type '{ first: string; ...T; ssssssssecond: string; ...U; third: string; }'.
            { first: '1', ...t, ssssssssecond: '2', ...u, third: '3' }; // error, 'second' not found
        const mismatchLast: { first: string, ...T, second: string, ...U, third: string } =
              ~~~~~~~~~~~~
!!! error TS2322: Type '{ first: string; ...T; second: string; ...U; thirrrrrrrd: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
!!! error TS2322:   Property 'third' is missing in type '{ first: string; ...T; second: string; ...U; thirrrrrrrd: string; }'.
            { first: '1', ...t, second: '2', ...u, thirrrrrrrd: '3' }; // error, 'third' not found
    }
    